Add semi execution of Web App via Flask

--- a/templates/index.html
+++ b/templates/index.html
@@ -194,12 +194,6 @@
             <option value="N">No</option>
         </select><br>
 
-        <label for="Comorb_Encntr_For_General_Exam_W_O_Complaint_Susp_Or_Reprtd_Dx">Encounter For General Exam Without Complaint, Suspicion, Or Reported Diagnosis:</label>
-        <select name="Comorb_Encntr_For_General_Exam_W_O_Complaint_Susp_Or_Reprtd_Dx" id="Comorb_Encntr_For_General_Exam_W_O_Complaint_Susp_Or_Reprtd_Dx">
-            <option value="Y">Yes</option>
-            <option value="N">No</option>
-        </select><br>
-
         <label for="Comorb_Vitamin_D_Deficiency">Vitamin D Deficiency:</label>
         <select name="Comorb_Vitamin_D_Deficiency" id="Comorb_Vitamin_D_Deficiency">
             <option value="N">No</option>
@@ -210,6 +204,12 @@
         <select name="Comorb_Other_Joint_Disorder_Not_Elsewhere_Classified" id="Comorb_Other_Joint_Disorder_Not_Elsewhere_Classified">
             <option value="N">No</option>
             <option value="Y">Yes</option>
+        </select><br>
+
+        <label for="Comorb_Encntr_For_General_Exam_W_O_Complaint,_Susp_Or_Reprtd_Dx">Encounter For General Exam Without Complaint, Suspicion, Or Reported Diagnosis:</label>
+        <select name="Comorb_Encntr_For_General_Exam_W_O_Complaint,_Susp_Or_Reprtd_Dx" id="Comorb_Encntr_For_General_Exam_W_O_Complaint,_Susp_Or_Reprtd_Dx">
+            <option value="Y">Yes</option>
+            <option value="N">No</option>
         </select><br>
 
         <label for="Comorb_Encntr_For_Oth_Sp_Exam_W_O_Complaint_Suspected_Or_Reprtd_Dx">Encounter For Other Special Examination Without Complaint, Suspected, Or Reported Diagnosis:</label>
@@ -283,6 +283,8 @@
             <option value="N">No</option>
             <option value="Y">Yes</option>
         </select><br>
+
+
 
         <label for="Concom_Anti_Depressants_And_Mood_Stabilisers">Anti Depressants And Mood Stabilisers:</label>
         <select name="Concom_Anti_Depressants_And_Mood_Stabilisers" id="Concom_Anti_Depressants_And_Mood_Stabilisers">
